# Device_manager

./: CMakeLists.txt  README.md  main.cpp
devices/: README.md
devices/adc/: adcdevicewidget.cpp  adcdevicewidget.hpp  adcdevicewidget.ui
devices/base/: basedevicewidget.cpp  basedevicewidget.hpp  command.cpp  command.hpp
devices/programmer/: programmerdevicewidget.cpp  programmerdevicewidget.hpp
devices/programmer/device_editor/: device_editor.cpp  device_editor.hpp  editor_size.hpp
devices/programmer/device_editor/commands_editor/: command_block_editor.cpp  command_block_editor.hpp
devices/programmer/device_editor/commands_editor/command_line/: command_line_editor.cpp  command_line_editor.hpp
devices/programmer/sequence_editor/: coordinates.hpp  graphics.cpp  graphics.hpp  graphics_view.cpp  graphics_view.hpp
devices/programmer/sequence_editor/items/: device_axes.cpp  device_axes.hpp
devices/programmer/sequence_editor/items/command_items/: command_area.cpp  command_area.hpp  style_headers.hpp
devices/programmer/sequence_editor/items/command_items/command_style/: base_command_style.cpp  base_command_style.hpp  lock_command.cpp  lock_command.hpp  pulse_command.cpp  pulse_command.hpp
devices/programmer/sequence_editor/items/events/: baseevent.cpp  baseevent.hpp
devices/programmer/sequence_editor/items/events/interval/: interval.cpp  interval.hpp  interval_header.cpp  interval_header.hpp
devices/programmer/synchrodevices/: sync_basedevice.cpp  sync_basedevice.hpp
devices/programmer/synchrodevices/command_block/: arguments.cpp  arguments.hpp  block_data.cpp  block_data.hpp  command_block.cpp  command_block.hpp
devices/programmer/synchrodevices/command_block/command_settings/: argument_settings_widget.cpp  argument_settings_widget.hpp  block_settings_widget.cpp  block_settings_widget.hpp
devices/programmer/synchrodevices/syncdevicewidget/: sync_device_widget.cpp  sync_device_widget.hpp
devices/rf/: rfdevicewidget.cpp  rfdevicewidget.hpp
devices/samplepositioning/: samplepositioningdevicewidget.cpp  samplepositioningdevicewidget.hpp  samplepositioningdevicewidget.ui  spd_notes.md  spd_tickmarkslider.cpp  spd_tickmarkslider.hpp
devices/scheduler/: schedulerdevicewidget.cpp  schedulerdevicewidget.hpp  task.cpp  task.hpp  taskwidget.cpp  taskwidget.hpp
devices/thermoblock/: thermoblockdevicewidget.cpp
devices/universal/: universaldevicewidget.cpp  universaldevicewidget.hpp
docs/: hardware.md  mcontroller.md
docs/notes/: backend_thoughts.md  develop_thoughts.md  ui_thoughts.md
helper_projects/: README.md
helper_projects/client/: CMakeLists.txt  client.cpp  client.hpp  main_client.cpp
helper_projects/expressions/: CMakeLists.txt  expressions.cpp
helper_projects/messenger/: CMakeLists.txt  main_messenger.cpp  messenger.cpp  messenger.hpp
helper_projects/server/: CMakeLists.txt  main_server.cpp  server.cpp  server.hpp
helpers/: ipvalidator.cpp  ipvalidator.hpp
operator/: operator.cpp  operator.hpp
operator/connection/: baseconnection.cpp  baseconnection.hpp  udpconnection.cpp  udpconnection.hpp
operator/deviceloader/: basesavable.cpp  basesavable.hpp  deviceloader.cpp  deviceloader.hpp
operator/formatter/: basecommandformatter.hpp  controlbyteformatter.cpp  controlbyteformatter.hpp  requestformatter.cpp  requestformatter.hpp
resources/: README.md  resources.qrc
widgets/: README.md  mainwidget.cpp  mainwidget.hpp  mainwindow.cpp  mainwindow.hpp  sidemenuwidget.cpp  sidemenuwidget.hpp
widgets/settingswidgets/: baseconnectionsettingswidget.cpp  baseconnectionsettingswidget.hpp  settingswindow.cpp  settingswindow.hpp  udpsettingswidget.cpp  udpsettingswidget.hpp
widgets/subwidgets/: customlistwidget.cpp  customlistwidget.hpp  horizontaltabbar.cpp  horizontaltabbar.hpp
